--- a/style.css
+++ b/style.css
@@ -156,156 +156,34 @@ body{
     color: purple;
 }
 @media (max-width: 719px){
-    *{
-    }
-    body{
-        background-color: var(--cor-fundo);
-        color: var(--branco-principal);
-        font-size: 10px;
-        font-family: var(--fonte-principal);
-        font-weight: 400;
-        align-items: center;
-        padding: 1em 1em;
-    }
-    
-    .principal{
-        background-image: url("assets/background.png");
-        background-repeat: no-repeat;
-        background-position: center;
-    }
-    
     .container{
-        height: vh 0;
-        margin: 2em 2em;
-        display: flex;
-        grid-template-columns: none;
-    }
-    
-    .container__botao{
-        background-color: var(--botao-azul);
-        border-radius: 5px;
-        padding: 1em;
-        color: var(--branco-principal);
         display: block;
-        text-decoration: none;
-        margin-bottom: 1em;
+        background-image: none;
+        height: 60vh;
     }
-    
-    .botao__secundario{
-        background-color: transparent;
-        border: 1px solid var(--branco-principal);
-    }
-    
-    .container__aviso{
-        font-size: 8px;
-        color: var(--cinza-secundario);
-    }
-    
-    .container__titulo{
-        font-size: 24px;
-        font-weight: 700;
 
-    }
-    
     .container__imagem{
-        margin: 0.5em 0 1em 0;
-        image-resolution: 5%;
+        width: 50vw;
     }
-    
+
     .container__caixa{
-        margin: 0 3em;
-    }
-    
-    .container__imagem{
-        width: 40%;
+        margin: 2em 2em;
     }
     
     .secundario{
-        align-items: center;
-        margin: 0 2.5em;
+        margin: 0;
+        text-align: center;
     }
-    
-    .descricao__titulo{
-        font-weight: 700;
-        font-size: 24px;
-        color: var(--branco-principal);
-        margin-bottom: 0.1%;
-    }
-    
-    .descricao__texto{
-        color: var(--cinza-secundario)
-    }
-    
-    .secundario__botao{
-        display: inline-block;   
-        margin-top: 0.5em;
-    }
+
     .secundario__imagem{
-        max-width:200px;
-        max-height:150px;
-        width: auto;
-        height: auto;
+        width: 50vw;
     }
-    
-    .container__descricao{
-        padding: 1em;
-    }
-    
+
     .dispositivos__lista{
-        display: flex;
-        justify-content: center;
-        list-style-type: none;
-        margin: 5em 0;
+        display: block;
     }
-    
-    .dispositivos{
-        text-align: center;
-    }
-    
-    .dispositivos__titulo{
-        font-size: 24px;
-        color: var(--branco-principal);
-    }
-    
-    .lista__item{
-        font-size: 16px;
-        color: var(--branco-principal);
-    }
-    
-    .rodape{
-        background-color: var(--cor-fundo);
-        color: var(--branco-principal);
-        font-family: var(--fonte-principal);
-        font-size: 12px;
-        font-weight: 400;
-        text-align: center;
-        margin: 5em 3em;
-    }
-    
+
     .rodape__lista{
-        display: flex;
-        justify-content: center;
-        list-style-type: none;
-        margin: 1em;
-    }
-    
-    .lista__link a{
-        text-decoration: none;
-        color: var(--branco-principal);
-        margin-left: 1em;
-    }
-    
-    .rodape__texto{
-        color: var(--cinza-secundario);
-        margin: 1em 0;
-    }
-    
-    .lista__link a:hover{
-        color: var(--botao-azul);
-    }
-    
-    .container__botao:hover{
-        background-color: var(--botao-azul-efeito);
-        color: purple;
+        display: block;
     }
 }
